// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package car.supplier.api;

option java_outer_classname = "ChargeSupplierApi";

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";



message ChargeChange {
	string car_id = 1 [(akkaserverless.field).entity_key = true];
	int32 remaining_watts = 2;
	int32 watts_capacity = 3;
}


message CarId {
	string car_id = 1 [(akkaserverless.field).entity_key = true];

} 


message CustomerBatteryState {
	string car_id = 1;
	int32 remaining_watts = 2;
	int32 watts_capacity = 3;
	double remaining_watts_percent = 4;
}

service ChargeSupplierService {

	rpc LowBattery(ChargeChange) returns (google.protobuf.Empty);

	rpc GetBatteryState(CarId) returns (CustomerBatteryState){
	    option (google.api.http) = {
	      get: "/alert/{car_id}"
	    };
  	}
	
}
